cmake_minimum_required(VERSION 3.21)
project(BaekJoon C)

set(CMAKE_C_STANDARD 99)

#add_executable(BaekJoon BaekJoon-2557.c BaekJoon-10718.c BaekJoon-1000.c)
add_executable(BaekJoon-1000 BaekJoon-1000.c)
add_executable(BaekJoon-10718 BaekJoon-10718.c)
add_executable(BaekJoon-2557 BaekJoon-2557.c)
add_executable(BaekJoon-1001 BaekJoon-1001.c)
add_executable(BaekJoon-10998 BaekJoon-10998.c)
#add_executable(BaekJoon-1008 BaekJoon-1008.c)
add_executable(BaekJoon-10869 BaekJoon-10869.c)
add_executable(BaekJoon-10926 BaekJoon-10926.c)
add_executable(BaekJoon-18108 BaekJoon-18108.c)
add_executable(BaekJoon-10430 BaekJoon-10430.c)
add_executable(BaekJoon-2588 BaekJoon-2588.c)
add_executable(BaekJoon-10171 BaekJoon-10171.c)
add_executable(BaekJoon-10172 BaekJoon-10172.c)
add_executable(BaekJoon-25083 BaekJoon-25083.c)